k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scheduler-ingress
  namespace: scheduler
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - scheduler.sviniabanditka.com
      secretName: scheduler-tls
  rules:
    - host: scheduler.sviniabanditka.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scheduler-app
                port:
                  number: 80
